
set(MAV_LINK_HEADERS 
mavlink.h
mavlink_msg_aslctrl_data.h
mavlink_msg_aslctrl_debug.h
mavlink_msg_asl_obctrl.h
mavlink_msg_asluav_status.h
mavlink_msg_ekf_ext.h
mavlink_msg_fw_soaring_data.h
mavlink_msg_sens_atmos.h
mavlink_msg_sens_batmon.h
mavlink_msg_sens_mppt.h
mavlink_msg_sensorpod_status.h
mavlink_msg_sens_power_board.h
mavlink_msg_sens_power.h
testsuite.h
version.h

)


# Use the Widgets module from Qt 5.
#target_link_libraries(LibThread Qt5::Widgets LibFlightDynamic)






