
set(MAV_LINK_HEADERS 
mavlink.h
mavlink_msg_adap_tuning.h
mavlink_msg_ahrs2.h
mavlink_msg_ahrs3.h
mavlink_msg_ahrs.h
mavlink_msg_airspeed_autocal.h
mavlink_msg_aoa_ssa.h
mavlink_msg_ap_adc.h
mavlink_msg_autopilot_version_request.h
mavlink_msg_battery2.h
mavlink_msg_camera_feedback.h
mavlink_msg_camera_status.h
mavlink_msg_compassmot_status.h
mavlink_msg_data16.h
mavlink_msg_data32.h
mavlink_msg_data64.h
mavlink_msg_data96.h
mavlink_msg_deepstall.h
mavlink_msg_device_op_read.h
mavlink_msg_device_op_read_reply.h
mavlink_msg_device_op_write.h
mavlink_msg_device_op_write_reply.h
mavlink_msg_digicam_configure.h
mavlink_msg_digicam_control.h
mavlink_msg_ekf_status_report.h
mavlink_msg_fence_fetch_point.h
mavlink_msg_fence_point.h
mavlink_msg_fence_status.h
mavlink_msg_gimbal_control.h
mavlink_msg_gimbal_report.h
mavlink_msg_gimbal_torque_cmd_report.h
mavlink_msg_gopro_get_request.h
mavlink_msg_gopro_get_response.h
mavlink_msg_gopro_heartbeat.h
mavlink_msg_gopro_set_request.h
mavlink_msg_gopro_set_response.h
mavlink_msg_hwstatus.h
mavlink_msg_led_control.h
mavlink_msg_limits_status.h
mavlink_msg_mag_cal_progress.h
mavlink_msg_mag_cal_report.h
mavlink_msg_meminfo.h
mavlink_msg_mount_configure.h
mavlink_msg_mount_control.h
mavlink_msg_mount_status.h
mavlink_msg_pid_tuning.h
mavlink_msg_radio.h
mavlink_msg_rally_fetch_point.h
mavlink_msg_rally_point.h
mavlink_msg_rangefinder.h
mavlink_msg_remote_log_block_status.h
mavlink_msg_remote_log_data_block.h
mavlink_msg_rpm.h
mavlink_msg_sensor_offsets.h
mavlink_msg_set_mag_offsets.h
mavlink_msg_simstate.h
mavlink_msg_vision_position_delta.h
mavlink_msg_wind.h
testsuite.h
version.h


)


# Use the Widgets module from Qt 5.
#target_link_libraries(LibThread Qt5::Widgets LibFlightDynamic)






