
set(MAV_LINK_HEADERS 
mavlink.h
mavlink_msg_airspeeds.h
mavlink_msg_altitudes.h
mavlink_msg_flexifunction_buffer_function_ack.h
mavlink_msg_flexifunction_buffer_function.h
mavlink_msg_flexifunction_command_ack.h
mavlink_msg_flexifunction_command.h
mavlink_msg_flexifunction_directory_ack.h
mavlink_msg_flexifunction_directory.h
mavlink_msg_flexifunction_read_req.h
mavlink_msg_flexifunction_set.h
mavlink_msg_serial_udb_extra_f13.h
mavlink_msg_serial_udb_extra_f14.h
mavlink_msg_serial_udb_extra_f15.h
mavlink_msg_serial_udb_extra_f16.h
mavlink_msg_serial_udb_extra_f17.h
mavlink_msg_serial_udb_extra_f18.h
mavlink_msg_serial_udb_extra_f19.h
mavlink_msg_serial_udb_extra_f20.h
mavlink_msg_serial_udb_extra_f21.h
mavlink_msg_serial_udb_extra_f22.h
mavlink_msg_serial_udb_extra_f2_a.h
mavlink_msg_serial_udb_extra_f2_b.h
mavlink_msg_serial_udb_extra_f4.h
mavlink_msg_serial_udb_extra_f5.h
mavlink_msg_serial_udb_extra_f6.h
mavlink_msg_serial_udb_extra_f7.h
mavlink_msg_serial_udb_extra_f8.h
testsuite.h
version.h


)


# Use the Widgets module from Qt 5.
#target_link_libraries(LibThread Qt5::Widgets LibFlightDynamic)






