
set(MAV_LINK_HEADERS 
mavlink_msg_boot.h
mavlink_msg_control_surface.h
mavlink_msg_cpu_load.h
mavlink_msg_ctrl_srfc_pt.h
mavlink_msg_data_log.h
mavlink_msg_diagnostic.h
mavlink_msg_gps_date_time.h
mavlink_msg_isr_location.h
mavlink_msg_mid_lvl_cmds.h
mavlink_msg_novatel_diag.h
mavlink_msg_ptz_status.h
mavlink_msg_sensor_bias.h
mavlink_msg_sensor_diag.h
mavlink_msg_slugs_camera_order.h
mavlink_msg_slugs_configuration_camera.h
mavlink_msg_slugs_mobile_location.h
mavlink_msg_slugs_navigation.h
mavlink_msg_status_gps.h
mavlink_msg_uav_status.h
mavlink_msg_volt_sensor.h
slugs.h
testsuite.h
version.h

)


# Use the Widgets module from Qt 5.
#target_link_libraries(LibThread Qt5::Widgets LibFlightDynamic)






